force-app/main/default/objects/Pending_Registrations__c/Pending_Registrations__c.object-meta.xml
<CustomObject>
    <label>Pending Registrations</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>Pending Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pending Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>