force-app/main/default/objects/Pending_Registrations__c/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <label>Matricula</label>
    <length>30</length>
    <type>Text</type>
</CustomField>