force-app/main/default/objects/Pending_Registrations__c/fields/Other_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Institution_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Institution Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select record of type Institution Master</errorMessage>
        <filterItems>
            <field>Master_Configuration__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Institution Master</value>
        </filterItems>
        <infoMessage>You can only select record of type Institution Master</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Master_Configuration__c</referenceTo>
    <relationshipLabel>Pending Registrations</relationshipLabel>
    <relationshipName>Pending_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>