force-app/main/default/objects/Pending_Registrations__c/fields/Profession__c.field-meta.xml
<CustomField>
    <fullName>Profession__c</fullName>
    <label>Profession</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>