force-app/main/default/objects/Pending_Registrations__c/fields/Sur_Name__c.field-meta.xml
<CustomField>
    <fullName>Sur_Name__c</fullName>
    <label>Sur Name</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>