force-app/main/default/objects/Pending_Registrations__c/validationRules/First_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(First_Name__c)), NOT( REGEX( First_Name__c, &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>First_Name__c</errorDisplayField>
    <errorMessage>no se permiten letras ni caracteres especiales</errorMessage>
</ValidationRule>