force-app/main/default/objects/Pending_Registrations__c/validationRules/Institution.validationRule-meta.xml
<ValidationRule>
    <fullName>Institution</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Institution__c)), NOT( REGEX( Institution__c , &quot;^[a-zA-Z0-9_%^&amp;()+=!~`,.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Institution__c</errorDisplayField>
    <errorMessage>Enter a Valid Institution</errorMessage>
</ValidationRule>