force-app/main/default/objects/Pending_Registrations__c/validationRules/Matricula.validationRule-meta.xml
<ValidationRule>
    <fullName>Matricula</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Matricula__c )), NOT( REGEX( Matricula__c , &quot;[a-zA-Z- À-ž0-9]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Matricula__c</errorDisplayField>
    <errorMessage>Caracteres especiales no están permitidos</errorMessage>
</ValidationRule>