force-app/main/default/objects/Pending_Registrations__c/validationRules/Nickname.validationRule-meta.xml
<ValidationRule>
    <fullName>Nickname</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Nick_Name__c )), NOT( REGEX( Nick_Name__c , &quot;^[a-zA-Z0-9_%^&amp;()+=!~`,.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Nick_Name__c</errorDisplayField>
    <errorMessage>Enter a valid Nickname</errorMessage>
</ValidationRule>