force-app/main/default/objects/Pending_Registrations__c/validationRules/Other_Institution_Should_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Institution_Should_be_blank</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND(  Institution__c != &apos;Other&apos;,  ISPICKVAL( Status__c , &apos;Registered&apos;), NOT(ISBLANK(  Other_Institution_Name__c ) )
) , true, false)</errorConditionFormula>
    <errorDisplayField>Other_Institution_Name__c</errorDisplayField>
    <errorMessage>Other Institution name should be blank if Institution is set apart from other</errorMessage>
</ValidationRule>