force-app/main/default/objects/Pending_Registrations__c/validationRules/Other_Institution_Should_not_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Institution_Should_not_be_blank</fullName>
    <active>false</active>
    <description>IF( AND(  Institution__c = &apos;Other&apos;,  ISPICKVAL( Status__c , &apos;Registered&apos;),ISBLANK(  Other_Institution_Name__c )
) , true, false)</description>
    <errorConditionFormula>IF( AND(   OR(Institution__c = &apos;Other&apos;,Institution__c = &apos;Otra&apos;) ,  ISPICKVAL( Status__c , &apos;Registered&apos;)
) , true, false)</errorConditionFormula>
    <errorDisplayField>Institution__c</errorDisplayField>
    <errorMessage>Antes de aprobar, cambie la institución de otro/Otra a alguna otra institución.</errorMessage>
</ValidationRule>