force-app/main/default/objects/Pending_Registrations__c/validationRules/Profession.validationRule-meta.xml
<ValidationRule>
    <fullName>Profession</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Profession__c)), NOT( REGEX( Profession__c, &quot;^[a-zA-Z0-9_%^&amp;()+=!~`,.#*/.\\$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Profession__c</errorDisplayField>
    <errorMessage>Enter a Valid Profession</errorMessage>
</ValidationRule>