force-app/main/default/objects/Pending_Registrations__c/validationRules/SurName.validationRule-meta.xml
<ValidationRule>
    <fullName>SurName</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Sur_Name__c)), NOT( REGEX( Sur_Name__c, &quot;[a-zA-Z- À-ž]*&quot;)))</errorConditionFormula>
    <errorDisplayField>Sur_Name__c</errorDisplayField>
    <errorMessage>No se permiten números ni caracteres especiales</errorMessage>
</ValidationRule>