force-app/main/default/objects/Pending_Registrations__c/validationRules/Username.validationRule-meta.xml
<ValidationRule>
    <fullName>Username</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT( ISBLANK(Username__c )), NOT( REGEX( Username__c  , &quot;^[a-zA-Z0-9_%^&amp;()+=!~`,.#*$?@.&amp;+-ñáéíóúü]*$&quot;)))</errorConditionFormula>
    <errorDisplayField>Username__c</errorDisplayField>
    <errorMessage>Enter a valid Username</errorMessage>
</ValidationRule>