force-app/main/default/objects/Pending_Registrations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Email__c</columns>
    <columns>Username__c</columns>
    <columns>Status__c</columns>
    <columns>Profession__c</columns>
    <columns>Institution__c</columns>
    <columns>Other_Institution_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>